--- a/content/newsletter/026.md
+++ b/content/newsletter/026.md
@@ -41,9 +41,7 @@ upcoming events.
 
 # IVOA NEWS
 
-{{< side-image image="ivoa_logoc2.jpg" position="right"
-floating="true"
-alt="IVOA Logo" >}}
+{{< side-image image="ivoa_logoc2.jpg" position="right" floating="true" alt="IVOA Logo" >}}
 
 
 ### 2024 Northern Fall Interoperability Meeting Overview
@@ -128,7 +126,7 @@ A complete accounting of nearby objects—from the highest-mass white dwarf prog
 
 DOI: [10.3847/1538-4365/ad24e2](https://doi.org/10.3847/1538-4365/ad24e2) 
 
-### [Refereed Publications](http://sdc.cab.inta-csic.es/vopubs/jsp/result.jsp?order=pub_id&bib=&com_id=-&com=&m_in=04&y_in=2022&m_en=05&y_en=2025&submit=Submit) { TBD - Check the parameters of this URL }
+### [Refereed Publications](http://sdc.cab.inta-csic.es/vopubs/jsp/result.jsp?order=pub_id&bib=&com_id=-&com=&m_in=04&y_in=2022&m_en=05&y_en=2025&submit=Submit) 
 
 The full list of refereed publications from April 2022 to May 2025 can be found at the following
 [list](https://sdc.cab.inta-csic.es/vopubs/jsp/result.jsp?order=cit_desc&bib=&com_id=-&com=&m_in=04&y_in=2022&m_en=05&y_en=2025&submit=Submit),
