Fix link to ivoa logo

--- a/content/newsletter/026.md
+++ b/content/newsletter/026.md
@@ -41,7 +41,7 @@ upcoming events.
 
 # IVOA NEWS
 
-{{< side-image image="ivoa_logoc2.jpg" position="right" floating="true" alt="IVOA Logo" >}}
+{{< side-image image="/images/ivoa_logoc2.jpg" position="right" floating="true" alt="IVOA Logo" >}}
 
 
 ### 2024 Northern Fall Interoperability Meeting Overview
