Newsletter 26 final version

--- a/content/newsletter/026.md
+++ b/content/newsletter/026.md
@@ -44,23 +44,42 @@ upcoming events.
 {{< side-image image="/images/ivoa_logoc2.jpg" position="right" floating="true" alt="IVOA Logo" >}}
 
 
-### 2024 Northern Fall Interoperability Meeting Overview
+## IVOA Interoperability meeting – Malta, November 2024
 
-{ TBD - Comma-separated list of authors }
+Simon O'Toole
 
-The 2024 Northern Fall Interop meeting was held 15 - 17 November 2024 at the University of Malta, Valletta. With ##?
-registered participants in person and online from all around the globe. Interop meetings are held
-every ∼6 months. Sessions were recorded and posted so that if you missed a
-session you can go back and view it. Here is the
-[link](https://www.canfar.net/storage/vault/list/IVOA/malta2024b) if you are
-interested in session videos.
+The Northern Fall Interoperability meeting was held on 15-17 November in Valletta, Malta, after the ADASS meeting. As with all IVOA meetings since the COVID pandemic, it was a hybrid meeting, with a large number of attendees in person (113 in person, 49 online). Sessions were recorded and posted online. There were many great discussions and some big decisions were made, outlined below.
 
 {{</ side-image >}}
 
-The sessions were led by the IVOA Working Groups (WG) and Interest Groups (IG)
-and focused on core topics related to .
 
-Here are several links to get involved:
+<h3 style="text-align: left;">High Energy Interest Group</h3>
+
+A new Interest Group focussed on High Energy Astrophysics was formally approved at the Malta Interop. This had followed over a year of planning and many discussions and a session at the May 2024 Interop in Sydney. The chair of the Interest Group is Bruno Khelifi from CNRS, and the vice chair is Janet Evans from CfA.
+
+The HEIG held a joint plenary session with the Time Domain Interest Group where we heard about multi-messenger astronomy and the transient nature of high energy astrophysics. This session led to a renewed focus on the VOEvent standard, and a splinter session organised to discuss the path moving forward.
+
+<h3 style="text-align: left;">Protocol Transitioning Tiger Team</h3>
+
+The P3T held its final session in Malta – a lot of great work by the team to move IVOA standards into the OpenAPI framework. Initial work around UWS was presented by Josh Fraustro and further discussions around more complex standards took place. The team presented a set of potential next steps, and the transition to OpenAPI will now be the responsibility of the working groups.
+
+<h3 style="text-align: left;">Highlights</h3>
+
+There were plenty of other highlights from this Interop, including but definitely not limited to the following:
+* Further discussions on Digital Object Identifiers and other persistent unique IDs.
+* A lot of work on Parquet format in the VO, including:
+  * HATS or the Hierarchical Adaptive Tiling Scheme, which is a Parquet-based partitioning format for very large all-sky catalogues. This is especially important in the LSST-era and beyond.
+  * How to bring VOTable and Parquet together in a sensible way
+* Uploads and user-managed tables in TAP services
+* Improvements to how Single Sign On is handled in the VO.
+
+<br>
+
+The Virtual Observatory is evolving and adapting to the needs of the community and in particular next generation facilities such as Vera Rubin Observatory and the SKA. The Malta Interop was a great example of this. Special thanks go to Alessio Magro and his team at the University of Malta for hosting us in such a beautiful part of the world!
+
+<br>
+
+Members of the astronomical community are welcome to get involved in the IVOA. See the links below for ways to participate:
 {{<my-table>}}
 | Name              | URL                               | Description                                       |
 | ----------------- | --------------------------------- | ------------------------------------------------- |
@@ -88,14 +107,14 @@ _The Initial Mass Function Based on the Full-sky 20 pc Census of ∼3600 Stars a
 
 _The Astrophysical Journal Supplement Series, Volume 271, 55_
 
-A complete accounting of nearby objects—from the highest-mass white dwarf progenitors down to low-mass brown dwarfs—is now possible, thanks to an almost complete set of trigonometric parallax determinations from Gaia, ground-based surveys, and Spitzer follow-up. We create a census of objects within a Sun-centered sphere of 20 pc radius and check published literature to decompose each binary or higher-order system into its separate components. The result is a volume-limited census of ∼3600 individual star formation products useful in measuring the initial mass function across the stellar (<8M ⊙) and substellar (≳5M Jup) regimes. Comparing our resulting initial mass function to previous measurements shows good agreement above 0.8M ⊙ and a divergence at lower masses. Our 20 pc space densities are best fit with a quadripartite power law,  ξ(M)=dN/dM∝M−α , with long-established values of α = 2.3 at high masses (0.55 < M < 8.00M ⊙), and α = 1.3 at intermediate masses (0.22 < M < 0.55M ⊙), but at lower masses, we find α = 0.25 for 0.05 < M < 0.22M ⊙, and α = 0.6 for 0.01 < M < 0.05M ⊙. This implies that the rate of production as a function of decreasing mass diminishes in the low-mass star/high-mass brown dwarf regime before increasing again in the low-mass brown dwarf regime. Correcting for completeness, we find a star to brown dwarf number ratio of, currently, 4:1, and an average mass per object of 0.41 M ⊙.
+A complete accounting of nearby objects—from the highest-mass white dwarf progenitors down to low-mass brown dwarfs—is now possible, thanks to an almost complete set of trigonometric parallax determinations from Gaia, ground-based surveys, and Spitzer follow-up. We create a census of objects within a Sun-centered sphere of 20 pc radius and check published literature to decompose each binary or higher-order system into its separate components. The result is a volume-limited census of ∼3600 individual star formation products useful in measuring the initial mass function across the stellar (<8M⊙) and substellar (≳5M Jup) regimes. Comparing our resulting initial mass function to previous measurements shows good agreement above 0.8M⊙ and a divergence at lower masses. Our 20 pc space densities are best fit with a quadripartite power law,  ξ(M)=dN/dM∝M−α , with long-established values of α = 2.3 at high masses (0.55 < M < 8.00M⊙), and α = 1.3 at intermediate masses (0.22 < M < 0.55M⊙), but at lower masses, we find α = 0.25 for 0.05 < M < 0.22M⊙, and α = 0.6 for 0.01 < M < 0.05M⊙. This implies that the rate of production as a function of decreasing mass diminishes in the low-mass star/high-mass brown dwarf regime before increasing again in the low-mass brown dwarf regime. Correcting for completeness, we find a star to brown dwarf number ratio of, currently, 4:1, and an average mass per object of 0.41 M⊙.
 
 DOI: [10.3847/1538-4365/ad24e2](https://doi.org/10.3847/1538-4365/ad24e2)
 
-### [Refereed Publications](http://sdc.cab.inta-csic.es/vopubs/jsp/result.jsp?order=pub_id&bib=&com_id=-&com=&m_in=04&y_in=2022&m_en=05&y_en=2025&submit=Submit)
+### [Refereed Publications](http://sdc.cab.inta-csic.es/vopubs/jsp/result.jsp?order=pub_id&bib=&com_id=-&com=&m_in=04&y_in=2022&m_en=06&y_en=2025&submit=Submit)
 
-The full list of refereed publications from April 2022 to May 2025 can be found at the following
-[list](https://sdc.cab.inta-csic.es/vopubs/jsp/result.jsp?order=cit_desc&bib=&com_id=-&com=&m_in=04&y_in=2022&m_en=05&y_en=2025&submit=Submit),
+The full list of refereed publications from April 2022 to June 2025 can be found at the following
+[list](https://sdc.cab.inta-csic.es/vopubs/jsp/result.jsp?order=cit_desc&bib=&com_id=-&com=&m_in=04&y_in=2022&m_en=06&y_en=2025&submit=Submit),
 curated by the Spanish Virtual Observatory.
 
 ### More Ways to Find VO-related Publications
@@ -169,5 +188,16 @@ mentioning the "virtual observatory" in the abstract.
   ADASS XXXV program will include invited talks, contributed papers, display
   sessions, tutorials, computer demonstrations, and special interest ("Birds of
   a Feather" or BoF) meetings.
+
+* **14 - 16 November 2025 - IVOA Interoperability Meeting**
+
+  The International Virtual Observatory Alliance (IVOA) semi-annual
+  Interoperability meetings provide an opportunity for discussion and
+  development of virtual observatory standards and VO-based applications, and
+  are open to those with an interest in utilizing the VO infrastructure and
+  tools in support of observatory operations and/or astronomical research. The
+  Northern Fall 2025 IVOA Interoperability meeting will follow ADASS and is 
+  expected to be held in Goerlitz or Dresden. Stay informed by visiting the 
+  [IVOA Events page](https://wiki.ivoa.net/twiki/bin/view/IVOA/IvoaEvents). 
 
 {{< newsletter-social-links >}}
