Newsletter 26 final version - revisions

--- a/content/newsletter/026.md
+++ b/content/newsletter/026.md
@@ -11,31 +11,15 @@ highlights:
 [Newsletter archives](/newsletter/) |
 [Write to the editors](mailto:ivoa-news-editors@ivoa.net)
 
-**The International Virtual Observatory Alliance (IVOA) was formed in June 2002
-with a mission to facilitate the international coordination and collaboration
-necessary for the development and deployment of the tools, systems and
-organizational structures necessary to enable the international utilization of
-astronomical archives as an integrated and interoperating virtual observatory.
-The IVOA now comprises 20 VO programs from Argentina, Armenia, Australia,
-Brazil, Canada, Chile, China, Europe, France, Germany, Hungary, India, Italy,
-Japan, Russia, South Africa, Spain, Ukraine, the United Kingdom, and the United
-States and an inter-governmental organization (ESA). Membership is open to other
-national and international programs according to the
-[IVOA Guidelines for Participation](http://ivoa.net/Documents/latest/IVOAParticipation.html).
-You can read more about the IVOA and what we do at
-[http://ivoa.net/about/](/about/).**
+**The International Virtual Observatory Alliance (IVOA) was formed in June 2002 with a mission to facilitate the international coordination and collaboration necessary for the development and deployment of the tools, systems and organizational structures necessary to enable the international utilization of astronomical archives as an integrated and interoperating virtual observatory.
+The IVOA now comprises 20 VO programs from Argentina, Armenia, Australia, Brazil, Canada, Chile, China, Europe, France, Germany, Hungary, India, Italy, Japan, Russia, South Africa, Spain, Ukraine, the United Kingdom, and the United States and an inter-governmental organization (ESA). Membership is open to other national and international programs according to the [IVOA Guidelines for Participation](http://ivoa.net/Documents/latest/IVOAParticipation.html).
+You can read more about the IVOA and what we do at [http://ivoa.net/about/](/about/).**
 
 **What is the VO?**
 
-The Virtual Observatory (VO) aims to provide a research environment that will
-open up new possibilities for scientific research based on data discovery,
-efficient data access, and interoperability. The vision is of global astronomy
-archives connected via the VO to form a multiwavelength digital sky that can be
-searched, visualized, and analyzed in new and innovative ways. VO projects
-worldwide working toward this vision are already providing science capabilities
-with new tools and services. This newsletter, aimed at astronomers, highlights
-VO tools and technologies for doing astronomy research, recent papers, and
-upcoming events.
+The Virtual Observatory (VO) aims to provide a research environment that will open up new possibilities for scientific research based on data discovery, efficient data access, and interoperability. The vision is of global astronomy archives connected via the VO to form a multiwavelength digital sky that can be searched, visualized, and analyzed in new and innovative ways. 
+VO projects worldwide working toward this vision are already providing science capabilities with new tools and services. 
+This newsletter, aimed at astronomers, highlights VO tools and technologies for doing astronomy research, recent papers, and upcoming events.
 
 ---
 
@@ -48,34 +32,43 @@ upcoming events.
 
 Simon O'Toole
 
-The Northern Fall Interoperability meeting was held on 15-17 November in Valletta, Malta, after the ADASS meeting. As with all IVOA meetings since the COVID pandemic, it was a hybrid meeting, with a large number of attendees in person (113 in person, 49 online). Sessions were recorded and posted online. There were many great discussions and some big decisions were made, outlined below.
+The Northern Fall Interoperability meeting was held on 15-17 November in Valletta, Malta, after the ADASS meeting. 
+As with all IVOA meetings since the COVID pandemic, it was a hybrid meeting, with a large number of attendees in person (113 in person, 49 online). 
+Sessions were recorded and posted online. 
+There were many great discussions and some big decisions were made, outlined below.
 
 {{</ side-image >}}
 
-
 <h3 style="text-align: left;">High Energy Interest Group</h3>
 
-A new Interest Group focussed on High Energy Astrophysics was formally approved at the Malta Interop. This had followed over a year of planning and many discussions and a session at the May 2024 Interop in Sydney. The chair of the Interest Group is Bruno Khelifi from CNRS, and the vice chair is Janet Evans from CfA.
+A new Interest Group focussed on High Energy Astrophysics (HEIG) was formally approved at the Malta Interop. 
+This had followed over a year of planning and many discussions and a session at the May 2024 Interop in Sydney. 
+The chair of the Interest Group is Bruno Khelifi from [CNRS](https://www.in2p3.cnrs.fr/fr), and the vice chair is Janet Evans from [CfA](https://www.cfa.harvard.edu/).
 
-The HEIG held a joint plenary session with the Time Domain Interest Group where we heard about multi-messenger astronomy and the transient nature of high energy astrophysics. This session led to a renewed focus on the VOEvent standard, and a splinter session organised to discuss the path moving forward.
+The HEIG held a joint plenary session with the Time Domain Interest Group where we heard about multi-messenger astronomy and the transient nature of high energy astrophysics. 
+This session led to a renewed focus on the [VOEvent](https://www.ivoa.net/documents/VOEventTransport/) standard, and a splinter session organised to discuss the path moving forward.
 
 <h3 style="text-align: left;">Protocol Transitioning Tiger Team</h3>
 
-The P3T held its final session in Malta – a lot of great work by the team to move IVOA standards into the OpenAPI framework. Initial work around UWS was presented by Josh Fraustro and further discussions around more complex standards took place. The team presented a set of potential next steps, and the transition to OpenAPI will now be the responsibility of the working groups.
+The Protocol Transitioning Tiger Team (P3T) held its final session in Malta with a lot of great work by the team to move IVOA standards into the OpenAPI framework. 
+Initial work around [UWS](https://www.ivoa.net/documents/UWS/) was presented by Josh Fraustro and further discussions around more complex standards took place. 
+The team presented a set of potential next steps, and the transition to OpenAPI will now be the responsibility of the working groups.
 
 <h3 style="text-align: left;">Highlights</h3>
 
-There were plenty of other highlights from this Interop, including but definitely not limited to the following:
+There were plenty of other highlights from this Interop, including, but definitely not limited to, the following:
 * Further discussions on Digital Object Identifiers and other persistent unique IDs.
 * A lot of work on Parquet format in the VO, including:
-  * HATS or the Hierarchical Adaptive Tiling Scheme, which is a Parquet-based partitioning format for very large all-sky catalogues. This is especially important in the LSST-era and beyond.
+  * HATS or the Hierarchical Adaptive Tiling Scheme, which is a Parquet-based partitioning format for very large all-sky catalogues. This is especially important in the [LSST](https://www.lsst.org/)-era and beyond.
   * How to bring VOTable and Parquet together in a sensible way
-* Uploads and user-managed tables in TAP services
+* Uploads and user-managed tables in [TAP](https://www.ivoa.net/documents/TAP/) services
 * Improvements to how Single Sign On is handled in the VO.
 
 <br>
 
-The Virtual Observatory is evolving and adapting to the needs of the community and in particular next generation facilities such as Vera Rubin Observatory and the SKA. The Malta Interop was a great example of this. Special thanks go to Alessio Magro and his team at the University of Malta for hosting us in such a beautiful part of the world!
+The Virtual Observatory is evolving and adapting to the needs of the community and in particular next generation facilities such as the [Vera Rubin Observatory](https://www.lsst.org/) and the [SKA](https://www.skao.int/en). 
+The Malta Interop was a great example of this. 
+Special thanks go to Alessio Magro and his team at the [University of Malta](https://www.um.edu.mt/) for hosting us in such a beautiful part of the world!
 
 <br>
 
@@ -107,23 +100,23 @@ _The Initial Mass Function Based on the Full-sky 20 pc Census of ∼3600 Stars a
 
 _The Astrophysical Journal Supplement Series, Volume 271, 55_
 
-A complete accounting of nearby objects—from the highest-mass white dwarf progenitors down to low-mass brown dwarfs—is now possible, thanks to an almost complete set of trigonometric parallax determinations from Gaia, ground-based surveys, and Spitzer follow-up. We create a census of objects within a Sun-centered sphere of 20 pc radius and check published literature to decompose each binary or higher-order system into its separate components. The result is a volume-limited census of ∼3600 individual star formation products useful in measuring the initial mass function across the stellar (<8M⊙) and substellar (≳5M Jup) regimes. Comparing our resulting initial mass function to previous measurements shows good agreement above 0.8M⊙ and a divergence at lower masses. Our 20 pc space densities are best fit with a quadripartite power law,  ξ(M)=dN/dM∝M−α , with long-established values of α = 2.3 at high masses (0.55 < M < 8.00M⊙), and α = 1.3 at intermediate masses (0.22 < M < 0.55M⊙), but at lower masses, we find α = 0.25 for 0.05 < M < 0.22M⊙, and α = 0.6 for 0.01 < M < 0.05M⊙. This implies that the rate of production as a function of decreasing mass diminishes in the low-mass star/high-mass brown dwarf regime before increasing again in the low-mass brown dwarf regime. Correcting for completeness, we find a star to brown dwarf number ratio of, currently, 4:1, and an average mass per object of 0.41 M⊙.
+A complete accounting of nearby objects—from the highest-mass white dwarf progenitors down to low-mass brown dwarfs—is now possible, thanks to an almost complete set of trigonometric parallax determinations from Gaia, ground-based surveys, and Spitzer follow-up. 
+We create a census of objects within a Sun-centered sphere of 20 pc radius and check published literature to decompose each binary or higher-order system into its separate components. The result is a volume-limited census of ∼3600 individual star formation products useful in measuring the initial mass function across the stellar (<8M⊙) and substellar (≳5M Jup) regimes. 
+Comparing our resulting initial mass function to previous measurements shows good agreement above 0.8M⊙ and a divergence at lower masses. Our 20 pc space densities are best fit with a quadripartite power law,  ξ(M)=dN/dM∝M−α , with long-established values of α = 2.3 at high masses (0.55 < M < 8.00M⊙), and α = 1.3 at intermediate masses (0.22 < M < 0.55M⊙), but at lower masses, we find α = 0.25 for 0.05 < M < 0.22M⊙, and α = 0.6 for 0.01 < M < 0.05M⊙. 
+This implies that the rate of production as a function of decreasing mass diminishes in the low-mass star/high-mass brown dwarf regime before increasing again in the low-mass brown dwarf regime. 
+Correcting for completeness, we find a star to brown dwarf number ratio of, currently, 4:1, and an average mass per object of 0.41 M⊙.
 
 DOI: [10.3847/1538-4365/ad24e2](https://doi.org/10.3847/1538-4365/ad24e2)
 
 ### [Refereed Publications](http://sdc.cab.inta-csic.es/vopubs/jsp/result.jsp?order=pub_id&bib=&com_id=-&com=&m_in=04&y_in=2022&m_en=06&y_en=2025&submit=Submit)
 
-The full list of refereed publications from April 2022 to June 2025 can be found at the following
-[list](https://sdc.cab.inta-csic.es/vopubs/jsp/result.jsp?order=cit_desc&bib=&com_id=-&com=&m_in=04&y_in=2022&m_en=06&y_en=2025&submit=Submit),
-curated by the Spanish Virtual Observatory.
+The full list of refereed publications from April 2022 to June 2025 can be found at the following [list](https://sdc.cab.inta-csic.es/vopubs/jsp/result.jsp?order=cit_desc&bib=&com_id=-&com=&m_in=04&y_in=2022&m_en=06&y_en=2025&submit=Submit), curated by the Spanish Virtual Observatory.
 
 ### More Ways to Find VO-related Publications
 
-All [ADS links](https://ui.adsabs.harvard.edu/#search/q=abstract%3A%22Virtual%20Observatory%22&sort=date%20desc%2C%20bibcode%20desc)
-mentioning the "virtual observatory" in the abstract.
+All [ADS links](https://ui.adsabs.harvard.edu/#search/q=abstract%3A%22Virtual%20Observatory%22&sort=date%20desc%2C%20bibcode%20desc) mentioning the "virtual observatory" in the abstract.
 
-All [refereed publications](https://ui.adsabs.harvard.edu/#search/fq=%7B!type%3Daqp%20v%3D%24fq_property%7D&fq_property=(property%3A%22refereed%22)&q=abstract%3A%22Virtual%20Observatory%22&sort=date%20desc%2C%20bibcode%20desc)
-mentioning the "virtual observatory" in the abstract.
+All [refereed publications](https://ui.adsabs.harvard.edu/#search/fq=%7B!type%3Daqp%20v%3D%24fq_property%7D&fq_property=(property%3A%22refereed%22)&q=abstract%3A%22Virtual%20Observatory%22&sort=date%20desc%2C%20bibcode%20desc) mentioning the "virtual observatory" in the abstract.
 
 ---
 
@@ -133,71 +126,40 @@ mentioning the "virtual observatory" in the abstract.
 
   (College Park, Maryland, USA)
 
-  The International Virtual Observatory Alliance (IVOA) semi-annual
-  Interoperability meetings provide an opportunity for discussion and
-  development of virtual observatory standards and VO-based applications, and
-  are open to those with an interest in utilizing the VO infrastructure and
-  tools in support of observatory operations and/or astronomical research. The
-  Northern Spring 2025 IVOA Interoperability meeting will be hosted at the Edward
-  St. John Learning & Teaching Center at the University of Maryland from Monday
-  June 2 to Friday June 6, 2025. The meeting is financially supported by NAVO,
-  the NASA Astronomical Virtual Observatories, and University of Maryland.
-  We also acknowledge support from the Space Telescope Science Institute,
-  NASA ACROSS and the Joint Space-Science Institute. The meeting will be organised
-  in person and with the possibility to follow the main sessions remotely.
+  The International Virtual Observatory Alliance (IVOA) semi-annual Interoperability meetings provide an opportunity for discussion and development of virtual observatory standards and VO-based applications, and are open to those with an interest in utilizing the VO infrastructure and tools in support of observatory operations and/or astronomical research. 
+  The Northern Spring 2025 IVOA Interoperability meeting will be hosted at the Edward St. John Learning & Teaching Center at the University of Maryland from Monday June 2 to Friday June 6, 2025. 
+  The meeting is financially supported by NAVO, the NASA Astronomical Virtual Observatories, and University of Maryland.
+  We also acknowledge support from the Space Telescope Science Institute, NASA ACROSS and the Joint Space-Science Institute. 
+  The meeting will be organised in person and with the possibility to follow the main sessions remotely.
 
 * **8 - 12 June 2025 - 246th AAS Meeting**
 
   (Anchorage, Alaska, USA)
 
-  The American Astronomical Society (AAS) meetings serve as a venue for the
-  general astronomical community to gather and discuss the latest science,
-  tools, and technologies in astronomy. VO-related sessions and exhibits will be
-  held during the meeting, including presentations from international VO
-  partners, open to all astronomers. IVOA affiliated institutions will have
-  booths in the exhibition hall throughout the week, demonstrating tools and
-  services such as the NASA Astrophysics Data System, SciServer, VizieR, and
-  other VO data access interfaces. Attendees may learn more about the data and
-  services provided by those institutions, and have face-to-face discussions
-  with developers.
+  The American Astronomical Society (AAS) meetings serve as a venue for the general astronomical community to gather and discuss the latest science, tools, and technologies in astronomy. 
+  VO-related sessions and exhibits will be held during the meeting, including presentations from international VO partners, open to all astronomers. 
+  IVOA affiliated institutions will have booths in the exhibition hall throughout the week, demonstrating tools and services such as the NASA Astrophysics Data System, SciServer, VizieR, and other VO data access interfaces. 
+  Attendees may learn more about the data and services provided by those institutions, and have face-to-face discussions with developers.
 
 * **23 - 27 June 2025 - EAS Annual Meeting 2025**
 
   (University College Cork, Ireland)
 
-  The European Astronomical Society (EAS) Annual Meeting (formerly known as
-  EWASS, and earlier JENAM) has more than 30 years of tradition and it has
-  imposed itself as the largest conference for European astronomy. In addition
-  to plenary sessions and the award of prestigious prizes, the conference hosts
-  many symposia held in parallel, as well as special sessions and meetings. IVOA
-  affiliated institutions will have booths in the exhibition hall throughout the
-  week, demonstrating tools and services such as CDS's VizieR and Aladin, ESO
-  tools and services, ESA archives, and other VO data access interfaces.
-  Attendees may learn more about the data and services provided by these
-  institutions and have face-to-face discussions with scientists and developers.
+  The European Astronomical Society (EAS) Annual Meeting (formerly known as EWASS, and earlier JENAM) has more than 30 years of tradition and it has imposed itself as the largest conference for European astronomy. 
+  In addition to plenary sessions and the award of prestigious prizes, the conference hosts many symposia held in parallel, as well as special sessions and meetings. 
+  IVOA affiliated institutions will have booths in the exhibition hall throughout the week, demonstrating tools and services such as CDS's VizieR and Aladin, ESO tools and services, ESA archives, and other VO data access interfaces. 
+  Attendees may learn more about the data and services provided by these institutions and have face-to-face discussions with scientists and developers.
 
 * **9 - 13 November 2025 - ADASS XXXV**
 
   (Goerlitz, Germany)
 
-  This annual Astronomical Data Analysis Software and Systems (ADASS)
-  conference, held in a different location each year, is a forum for
-  astronomers, computer scientists, software engineers, faculty members and
-  students working in areas related to algorithms, software and systems for the
-  acquisition, reduction, analysis, and dissemination of astronomical data. The
-  ADASS XXXV program will include invited talks, contributed papers, display
-  sessions, tutorials, computer demonstrations, and special interest ("Birds of
-  a Feather" or BoF) meetings.
+  This annual Astronomical Data Analysis Software and Systems (ADASS) conference, held in a different location each year, is a forum for astronomers, computer scientists, software engineers, faculty members and students working in areas related to algorithms, software and systems for the acquisition, reduction, analysis, and dissemination of astronomical data. 
+  The ADASS XXXV program will include invited talks, contributed papers, display sessions, tutorials, computer demonstrations, and special interest ("Birds of a Feather" or BoF) meetings.
 
 * **14 - 16 November 2025 - IVOA Interoperability Meeting**
 
-  The International Virtual Observatory Alliance (IVOA) semi-annual
-  Interoperability meetings provide an opportunity for discussion and
-  development of virtual observatory standards and VO-based applications, and
-  are open to those with an interest in utilizing the VO infrastructure and
-  tools in support of observatory operations and/or astronomical research. The
-  Northern Fall 2025 IVOA Interoperability meeting will follow ADASS and is 
-  expected to be held in Goerlitz or Dresden. Stay informed by visiting the 
-  [IVOA Events page](https://wiki.ivoa.net/twiki/bin/view/IVOA/IvoaEvents). 
+  The International Virtual Observatory Alliance (IVOA) semi-annual Interoperability meetings provide an opportunity for discussion and development of virtual observatory standards and VO-based applications, and are open to those with an interest in utilizing the VO infrastructure and tools in support of observatory operations and/or astronomical research. 
+  The Northern Fall 2025 IVOA Interoperability meeting will follow ADASS and is expected to be held in Goerlitz or Dresden. Stay informed by visiting the [IVOA Events page](https://wiki.ivoa.net/twiki/bin/view/IVOA/IvoaEvents). 
 
 {{< newsletter-social-links >}}
