--- a/content/newsletter/026.md
+++ b/content/newsletter/026.md
@@ -25,7 +25,7 @@ This newsletter, aimed at astronomers, highlights VO tools and technologies for 
 
 # IVOA NEWS
 
-{{< side-image image="/images/ivoa_logoc2.jpg" position="right" floating="true" alt="IVOA Logo" >}}
+{{< side-image image="ivoa_logoc2.jpg" position="right" floating="true" alt="IVOA Logo" >}}
 
 
 ## IVOA Interoperability meeting – Malta, November 2024
