updated headers, urls, removed social media links in newsletter 26

--- a/content/newsletter/026.md
+++ b/content/newsletter/026.md
@@ -7,13 +7,13 @@ highlights:
 - 2024 Northern Fall Interoperability Meeting Overview
 ---
 
-[Subscribe](http://www.ivoa.net/mailman/listinfo/ivoa-news) |
+[Subscribe](https://www.ivoa.net/mailman/listinfo/ivoa-news) |
 [Newsletter archives](/newsletter/) |
 [Write to the editors](mailto:ivoa-news-editors@ivoa.net)
 
 **The International Virtual Observatory Alliance (IVOA) was formed in June 2002 with a mission to facilitate the international coordination and collaboration necessary for the development and deployment of the tools, systems and organizational structures necessary to enable the international utilization of astronomical archives as an integrated and interoperating virtual observatory.
-The IVOA now comprises 20 VO programs from Argentina, Armenia, Australia, Brazil, Canada, Chile, China, Europe, France, Germany, Hungary, India, Italy, Japan, Russia, South Africa, Spain, Ukraine, the United Kingdom, and the United States and an inter-governmental organization (ESA). Membership is open to other national and international programs according to the [IVOA Guidelines for Participation](http://ivoa.net/Documents/latest/IVOAParticipation.html).
-You can read more about the IVOA and what we do at [http://ivoa.net/about/](/about/).**
+The IVOA now comprises 20 VO programs from Argentina, Armenia, Australia, Brazil, Canada, Chile, China, Europe, France, Germany, Hungary, India, Italy, Japan, Russia, South Africa, Spain, Ukraine, the United Kingdom, and the United States and an inter-governmental organization (ESA). Membership is open to other national and international programs according to the [IVOA Guidelines for Participation](https://ivoa.net/Documents/latest/IVOAParticipation.html).
+You can read more about the IVOA and what we do at [https://ivoa.net/about/](/about/).**
 
 **What is the VO?**
 
@@ -39,7 +39,7 @@ There were many great discussions and some big decisions were made, outlined bel
 
 {{</ side-image >}}
 
-<h3 style="text-align: left;">High Energy Interest Group</h3>
+### High Energy Interest Group
 
 A new Interest Group focussed on High Energy Astrophysics (HEIG) was formally approved at the Malta Interop. 
 This had followed over a year of planning and many discussions and a session at the May 2024 Interop in Sydney. 
@@ -48,13 +48,13 @@ The chair of the Interest Group is Bruno Khelifi from [CNRS](https://www.in2p3.c
 The HEIG held a joint plenary session with the Time Domain Interest Group where we heard about multi-messenger astronomy and the transient nature of high energy astrophysics. 
 This session led to a renewed focus on the [VOEvent](https://www.ivoa.net/documents/VOEventTransport/) standard, and a splinter session organised to discuss the path moving forward.
 
-<h3 style="text-align: left;">Protocol Transitioning Tiger Team</h3>
+### Protocol Transitioning Tiger Team
 
 The Protocol Transitioning Tiger Team (P3T) held its final session in Malta with a lot of great work by the team to move IVOA standards into the OpenAPI framework. 
 Initial work around [UWS](https://www.ivoa.net/documents/UWS/) was presented by Josh Fraustro and further discussions around more complex standards took place. 
 The team presented a set of potential next steps, and the transition to OpenAPI will now be the responsibility of the working groups.
 
-<h3 style="text-align: left;">Highlights</h3>
+### Highlights
 
 There were plenty of other highlights from this Interop, including, but definitely not limited to, the following:
 * Further discussions on Digital Object Identifiers and other persistent unique IDs.
@@ -108,7 +108,7 @@ Correcting for completeness, we find a star to brown dwarf number ratio of, curr
 
 DOI: [10.3847/1538-4365/ad24e2](https://doi.org/10.3847/1538-4365/ad24e2)
 
-### [Refereed Publications](http://sdc.cab.inta-csic.es/vopubs/jsp/result.jsp?order=pub_id&bib=&com_id=-&com=&m_in=04&y_in=2022&m_en=06&y_en=2025&submit=Submit)
+### [Refereed Publications](https://sdc.cab.inta-csic.es/vopubs/jsp/result.jsp?order=pub_id&bib=&com_id=-&com=&m_in=04&y_in=2022&m_en=06&y_en=2025&submit=Submit)
 
 The full list of refereed publications from April 2022 to June 2025 can be found at the following [list](https://sdc.cab.inta-csic.es/vopubs/jsp/result.jsp?order=cit_desc&bib=&com_id=-&com=&m_in=04&y_in=2022&m_en=06&y_en=2025&submit=Submit), curated by the Spanish Virtual Observatory.
 
@@ -162,4 +162,3 @@ All [refereed publications](https://ui.adsabs.harvard.edu/#search/fq=%7B!type%3D
   The International Virtual Observatory Alliance (IVOA) semi-annual Interoperability meetings provide an opportunity for discussion and development of virtual observatory standards and VO-based applications, and are open to those with an interest in utilizing the VO infrastructure and tools in support of observatory operations and/or astronomical research. 
   The Northern Fall 2025 IVOA Interoperability meeting will follow ADASS and is expected to be held in Goerlitz or Dresden. Stay informed by visiting the [IVOA Events page](https://wiki.ivoa.net/twiki/bin/view/IVOA/IvoaEvents). 
 
-{{< newsletter-social-links >}}
